src/objects/SPE_SupplierTracker__c.object
<CustomObject>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Plan Supplier Map</label>
        <referenceTo>SPE_SPEPlanSupplierMap__c</referenceTo>
        <relationshipLabel>SPE_SupplierTracker</relationshipLabel>
        <relationshipName>SPE_SupplierTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPE_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Tracker</label>
        <referenceTo>SPE_SPETracker__c</referenceTo>
        <relationshipLabel>SPE_SupplierTracker</relationshipLabel>
        <relationshipName>SPE_SupplierTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SPE_SupplierTracker</label>
    <nameField>
        <displayFormat>ST-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE_SupplierTracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>